crates/openehr-serde/tests/snapshots/full_rm_canonical_json__INSTRUCTION.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "INSTRUCTION",
  "name": {
    "_type": "DV_TEXT",
    "value": "Medication order"
  },
  "archetype_node_id": "openEHR-EHR-INSTRUCTION.medication_order.v3",
  "language": {
    "_type": "CODE_PHRASE",
    "terminology_id": {
      "_type": "TERMINOLOGY_ID",
      "value": "ISO_639-1"
    },
    "code_string": "en"
  },
  "encoding": {
    "_type": "CODE_PHRASE",
    "terminology_id": {
      "_type": "TERMINOLOGY_ID",
      "value": "IANA_character-sets"
    },
    "code_string": "UTF-8"
  },
  "subject": {
    "_type": "PARTY_SELF"
  },
  "narrative": {
    "_type": "DV_TEXT",
    "value": "Aspirin 100mg daily"
  }
}
