crates/openehr-serde/tests/snapshots/full_rm_canonical_json__INTERVAL_EVENT.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "INTERVAL_EVENT",
  "name": {
    "_type": "DV_TEXT",
    "value": "interval"
  },
  "archetype_node_id": "at0006",
  "time": {
    "_type": "DV_DATE_TIME",
    "value": "2026-07-02T10:00:00Z"
  },
  "data": {
    "_type": "ITEM_TREE",
    "name": {
      "_type": "DV_TEXT",
      "value": "data"
    },
    "archetype_node_id": "at0003"
  },
  "width": {
    "_type": "DV_DURATION",
    "value": "PT5M"
  },
  "math_function": {
    "_type": "DV_CODED_TEXT",
    "value": "mean",
    "defining_code": {
      "_type": "CODE_PHRASE",
      "terminology_id": {
        "_type": "TERMINOLOGY_ID",
        "value": "openehr"
      },
      "code_string": "146"
    }
  }
}
