crates/openehr-serde/tests/snapshots/full_rm_canonical_json__ISM_TRANSITION.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "ISM_TRANSITION",
  "current_state": {
    "_type": "DV_CODED_TEXT",
    "value": "planned",
    "defining_code": {
      "_type": "CODE_PHRASE",
      "terminology_id": {
        "_type": "TERMINOLOGY_ID",
        "value": "openehr"
      },
      "code_string": "526"
    }
  }
}
