crates/openehr-serde/tests/snapshots/full_rm_canonical_json__ISO_OID.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "ISO_OID",
  "value": "1.2.840.10008"
}
