crates/openehr-serde/tests/snapshots/full_rm_canonical_json__ITEM_LIST.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "ITEM_LIST",
  "name": {
    "_type": "DV_TEXT",
    "value": "list"
  },
  "archetype_node_id": "at0001",
  "items": [
    {
      "_type": "ELEMENT",
      "name": {
        "_type": "DV_TEXT",
        "value": "first"
      },
      "archetype_node_id": "at0002",
      "value": {
        "_type": "DV_TEXT",
        "value": "one"
      }
    }
  ]
}
