crates/openehr-serde/tests/snapshots/full_rm_canonical_json__ITEM_TABLE.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "ITEM_TABLE",
  "name": {
    "_type": "DV_TEXT",
    "value": "table"
  },
  "archetype_node_id": "at0001",
  "rows": [
    {
      "_type": "CLUSTER",
      "name": {
        "_type": "DV_TEXT",
        "value": "row 1"
      },
      "archetype_node_id": "at0002",
      "items": [
        {
          "_type": "ELEMENT",
          "name": {
            "_type": "DV_TEXT",
            "value": "inner"
          },
          "archetype_node_id": "at0002",
          "value": {
            "_type": "DV_TEXT",
            "value": "v"
          }
        }
      ]
    }
  ]
}
