crates/openehr-serde/tests/snapshots/full_rm_canonical_json__ITEM_TREE.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "ITEM_TREE",
  "name": {
    "_type": "DV_TEXT",
    "value": "tree"
  },
  "archetype_node_id": "at0001"
}
