crates/openehr-serde/tests/snapshots/full_rm_canonical_json__LINK.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "LINK",
  "meaning": {
    "_type": "DV_TEXT",
    "value": "problem"
  },
  "type": {
    "_type": "DV_TEXT",
    "value": "issue"
  },
  "target": {
    "_type": "DV_EHR_URI",
    "value": "ehr://ehr.example.org/ehr1"
  }
}
